# TIPL

./: CMakeLists.txt  COPYRIGHT  README.md  TIPLConfig.cmake.in  cmd.hpp  cu.hpp  def.hpp  environment.yml  image.hpp  mt.hpp  po.hpp  prog.hpp  tipl.hpp  tipl.pc.in
.github/: FUNDING.yml
algo/: march_cube.hpp
cuda/: basic_image.hpp  cdm.hpp  kernel.hpp  linear.hpp  mem.hpp  numerical.hpp  resampling.hpp
example/: 100206_T1w.nii  example.ipynb
filter/: anisotropic_diffusion.hpp  canny_edge.hpp  filter_model.hpp  gaussian.hpp  gradient_magnitude.hpp  laplacian.hpp  mean.hpp  sobel.hpp
io/: 2dseq.hpp  avi.hpp  bitmap.hpp  dicom.hpp  gz_stream.hpp  interface.hpp  io.hpp  mat.hpp  nifti.hpp  nrrd.hpp  program_option.hpp  tiff.hpp  tiff_tag.hpp
ml/: ada_boost.hpp  cnn.hpp  cnn3d.hpp  cnn3d_detail.hpp  decision_tree.hpp  em.hpp  hmc.hpp  k_means.hpp  lg.hpp  nb.hpp  non_parametric.hpp  svm.cpp  svm.hpp  unet3d.hpp  utility.hpp
morphology/: morphology.hpp
notebooks/: examples.ipynb
numerical/: basic_op.hpp  dif.hpp  fft.hpp  index_algorithm.hpp  interpolation.hpp  matrix.hpp  morphology.hpp  numerical.hpp  optimization.hpp  otsu.hpp  resampling.hpp  slice.hpp  statistics.hpp  transformation.hpp  transformation.~hpp  window.hpp
reg/: bfnorm.hpp  cdm.hpp  cdm_cu.hpp  dmdm.hpp  lddmm.hpp  linear.hpp  linear_cu.hpp  mm_reg.hpp  reg.hpp
segmentation/: disjoint_set.hpp  fast_marching.hpp  graph_cut.hpp  otsu.hpp  segmentation.hpp  stochastic_competition.hpp  watershed.hpp
utility/: basic_image.hpp  cu.hpp  def.hpp  geometry.hpp  multi_thread.hpp  pixel_index.hpp  pixel_value.hpp  rgb_image.hpp  shape.hpp
vis/: color_map.hpp  march_cube.hpp  qt_ext.hpp
